--- a/frontend/src/components/misc/Gift.css
+++ b/frontend/src/components/misc/Gift.css
@@ -1,30 +1,25 @@
 .gift {
   background-color: blue;
-  max-width: 1072px;
-  margin: 10%;
-  margin-right: 15%;
-  border-radius: 20px;
-  padding: 10%;
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
+  margin: 32px auto;
+  border-radius: 12px;
+  padding: 64px 15vw;
+  padding-bottom: 0;
   color: white;
-  font-size: 0.8rem;
 }
-
-.gift h3 {
-  text-align: left;
-}
-
-.building {
-  width: 100%;
-  border-radius: 20px;
-  margin-right: -35%;
-}
-
 .button {
   color: blue;
   background-color: white;
   padding: 16px 32px;
   font-weight: bold;
+}
+
+.gift {
+  width: 85vw;
+}
+
+.building {
+  width: 90vw;
+  margin-left: -17.5vw;
+  margin-top: 24px;
+  margin-bottom: -12px;
 }
