--- a/frontend/src/components/pages/Home.css
+++ b/frontend/src/components/pages/Home.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+.center {
+  text-align: center;
+  margin-bottom: 72px;
+}
+
 h1, h2, h3 {
   text-align: center;
 }
@@ -21,7 +26,6 @@ h1, h2, h3 {
   text-align: left;
   font-size: 1.5rem;
   box-shadow: 4px 4px 4px 4px rgba(0,0,0,.1);
-  
 }
 
 .content h3 {
@@ -107,4 +111,11 @@ h1, h2, h3 {
 .pr-header h3:nth-child(2) {
   flex: 1;
   text-align: right;
+}
+
+#properties {
+  margin: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 64px;
 }
