--- a/frontend/src/components/navigations/Footer.css
+++ b/frontend/src/components/navigations/Footer.css
@@ -31,8 +31,12 @@
 
 .bottom {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+  gap: 32px;
   padding: 24px 0;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .social-i {
@@ -45,11 +49,15 @@
 
 .top {
   display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: flex-start;
   gap: 32px;
 }
 
-.top-right, .top-middle, .top-left {
-  width: 30%;
+.top-left, .top-left h3 {
+  text-align: left;
 }
 
 .top-right {
