--- a/frontend/src/components/misc/QnA.css
+++ b/frontend/src/components/misc/QnA.css
@@ -1,3 +1,8 @@
+:root {
+  --blue: #006EFF;
+  --darkBlue: #12417E;
+}
+
 #qna {
   max-width: 600px;
   padding: 8px 32px;
@@ -5,11 +10,11 @@
   margin: 16px 2%;
   text-align: left;
   font-size: 1rem;
-   box-shadow: 4px 4px 4px 4px rgba(0,0,0,.1);
+  box-shadow: 4px 4px 4px 4px rgba(0,0,0,.1);
 }
 
 .border-blue {
-  border: 2px solid blue;
+  border: 2px solid var(--blue);
 }
 
 .drop-down {
@@ -17,7 +22,7 @@
 }
 
 .drop-down .fas {
-  color: blue;
+  color: var(--blue);
   font-size: 34px;
 }
 
