--- a/frontend/src/components/pages/Home.css
+++ b/frontend/src/components/pages/Home.css
@@ -25,16 +25,27 @@ h1, h2, h3 {
   border-radius: 16px;
   text-align: left;
   font-size: 1.5rem;
+  box-shadow: 4px 4px 4px 4px rgba(0,0,0,.1);
 }
 
-.content:nth-child(3) {
-    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, .1);
+.arc{
+  width: 200px;
+  height: 200px;
+  background: blue;
+  border-radius: 100%;
+  position: absolute ;
+  top: 0%;
+  right: 0%;
+  transform: translate3d(50%,-50%,0)
 }
 
 .content h3 {
   text-align: left;
   color: blue;
+  position: relative;
 }
+
+
 
 .content h3 .dash {
   font-size: 2rem;
@@ -79,28 +90,21 @@ h1, h2, h3 {
 
 .how {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
 }
 
 .how-right, .how-left{
-  width: 100%;
-  padding: 16px 32px;
+  width: 150px;
 }
 
-.how-left h3, .how-right h3 {
-  text-align: left;
-}
-
-/* .how-right p, .how-right h3 {
+.how-right p, .how-right h3 {
   text-align: left;
 }
 
 .how-left p, .how-left h3 {
   text-align: right;
-} */
+}
 
 .cl-blue {
   color: blue;
@@ -123,29 +127,9 @@ h1, h2, h3 {
   text-align: right;
 }
 
-.properties {
+#properties {
   margin: 16px;
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   margin-bottom: 64px;
-}
-
-@media (min-width: 768px) {
-  .how {
-    flex-direction: row;
-  }
-
-  .how-left, .how-right {
-    width: 150px;
-    padding: 0;
-  }
-
-  .how-left, .how-left h3 {
-    text-align: right;
-  }
-
-  .how-right {
-    order: +1;
-  }
 }
