--- a/frontend/src/components/pages/Home.css
+++ b/frontend/src/components/pages/Home.css
@@ -1,3 +1,8 @@
+:root {
+  --blue: #006EFF;
+  --darkBlue: #12417E;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -25,27 +30,30 @@ h1, h2, h3 {
   border-radius: 16px;
   text-align: left;
   font-size: 1.5rem;
-  box-shadow: 4px 4px 4px 4px rgba(0,0,0,.1);
 }
 
-.arc{
+.content:nth-child(3) {
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, .1);
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.content h3 {
+  text-align: left;
+  color: var(--blue);
+}
+
+.arc {
   width: 200px;
   height: 200px;
-  background: blue;
+  background: var(--blue);
   border-radius: 100%;
   position: absolute ;
   top: 0%;
   right: 0%;
   transform: translate3d(50%,-50%,0)
 }
-
-.content h3 {
-  text-align: left;
-  color: blue;
-  position: relative;
-}
-
-
 
 .content h3 .dash {
   font-size: 2rem;
@@ -56,7 +64,7 @@ h1, h2, h3 {
   text-align: center;
   margin: 64px 0;
   padding: 64px 5%;
-  background-color: blue;
+  background-color: var(--blue);
   color: white;
 }
 
@@ -72,42 +80,49 @@ h1, h2, h3 {
 }
 
 .fa-checker {
-  color: darkBlue;
-  background-color: white;
-  border-radius: 50%;
-  font-size: 64px;
+  color: white;
+  width: 64px;
+  margin: auto;
+  height: 64px;
+  background-color: var(--darkBlue);
+  border-radius: 100%;
+  font-size: 32px;
+  font-weight: 800;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-  .adcontent:nth-child(3) {
+.adcontent:nth-child(3) {
   background: white;
   box-shadow: 4px 4px 4px 4px white;
   color: black;
 }
 
 .adcontent:nth-child(3) .fa-checker{
-  color: blue;
+  color: white;
+  background-color: var(--blue);
 }
 
 .how {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
 }
 
 .how-right, .how-left{
-  width: 150px;
+  width: 100%;
+  padding: 16px 32px;
 }
 
-.how-right p, .how-right h3 {
+.how-left h3, .how-right h3 {
   text-align: left;
 }
 
-.how-left p, .how-left h3 {
-  text-align: right;
-}
-
 .cl-blue {
-  color: blue;
+  color: var(--blue);
 }
 
 .pr-header {
@@ -127,9 +142,29 @@ h1, h2, h3 {
   text-align: right;
 }
 
-#properties {
+.properties {
   margin: 16px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   margin-bottom: 64px;
+}
+
+@media (min-width: 768px) {
+  .how {
+    flex-direction: row;
+  }
+
+  .how-left, .how-right {
+    width: 150px;
+    padding: 0;
+  }
+
+  .how-left, .how-left h3 {
+    text-align: right;
+  }
+
+  .how-right {
+    order: +1;
+  }
 }
