Create about page

--- a/frontend/src/components/misc/Gift.css
+++ b/frontend/src/components/misc/Gift.css
@@ -42,7 +42,8 @@
     width: 300px;
   }
   .building {
-    width: 300px;
+    min-width: 300px;
+    max-width: 450px;
     margin: 0;
     margin-right: -90px;
 
