--- a/frontend/src/layout/Layout.css
+++ b/frontend/src/layout/Layout.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+.main-content {
+  min-height: 80vh;
+}
+
 .page-heading {
 	background-color: black;
 	color: white;
@@ -11,6 +15,9 @@
 	padding-top: 110px;
 }
 
+.faq h2 {
+  margin-top: 50px;
+}
 
 /*Contact us*/
 tr, td {
