Add scroll to top to all pages

--- a/frontend/src/components/misc/Header.css
+++ b/frontend/src/components/misc/Header.css
@@ -49,6 +49,10 @@ header a{
   text-decoration: none;
 }
 
+.action:hover {
+  background-color: var(--darkBlue);
+}
+
 @media (min-width: 48em) {
   header {
     background-image: url('../../images/header.png');
