--- a/frontend/src/components/misc/Gift.css
+++ b/frontend/src/components/misc/Gift.css
@@ -11,7 +11,7 @@
   padding-bottom: 0;
   color: white;
 }
-.button {
+.gift-button {
   color: var(--blue);
   border: 1px solid var(--blue);
   background-color: white;
