--- a/frontend/src/components/navigations/Footer.css
+++ b/frontend/src/components/navigations/Footer.css
@@ -25,7 +25,6 @@
 .footer a {
     display: block;
     padding: .4rem .7rem;
-    font-size: .9rem;
     text-decoration: none;
     color: rgba(255, 255, 255, 1);
 }
@@ -77,3 +76,10 @@
 .top-middle li {
   display: block;
 }
+
+/* 
+@media (min-width: 48em) {
+  .top {
+    justify-content: space-around;
+  }
+} */
